# footie-fixtures

./: .cookiecutter.json  .gitignore  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml
docs/: conf.py  index.md  reference.md  usage.md
src/footie_fixtures/: __init__.py  __main__.py  api.py  calendar_utils.py  errors.py  fixtures.py  football_api.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_calendar_utils.py  test_fixtures.py  test_football_api.py  test_main.py
tests/fixtures/cassettes/fixtures/: get_fixtures.yaml  get_fixtures_no_round.yaml  get_fixtures_no_rounds.yaml  get_fixtures_no_season.yaml  get_rounds.yaml  get_rounds_no_params.yaml
